--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
                 <div class="row g-4 d-flex justify-content-between align-items-center">
                   <div class="col-md-6 col-lg-3"> 
                     <div class="card bg-light">
-                      <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3 p-2">
-                      <h3 class="card-title mb-3 text-center"><u>Saloni</u></h3>
+                      <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3 p-2">
+                      <h3 class="card-title mb-3 text-center"><u>Mark</u></h3>
                       <p class="card-text p-3 text-center lead">
                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati velit ipsa voluptatibus aut inventore animi temporibus alias iure sint pariatur.
                       </p>
@@ -328,8 +328,8 @@
                   </div>   
                   <div class="col-md-6 col-lg-3"> 
                     <div class="card bg-light">
-                      <img src="https://randomuser.me/api/portraits/women/1.jpg" class="rounded-circle mb-3 p-2">
-                      <h3 class="card-title mb-3 text-center"><u>Kaveri</u></h3>
+                      <img src="https://randomuser.me/api/portraits/men/1.jpg" class="rounded-circle mb-3 p-2">
+                      <h3 class="card-title mb-3 text-center"><u>James</u></h3>
                       <p class="card-text p-3 text-center lead">
                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati velit ipsa voluptatibus aut inventore animi temporibus alias iure sint pariatur.
                       </p>
@@ -341,8 +341,8 @@
                   </div> 
                   <div class="col-md-6 col-lg-3"> 
                     <div class="card bg-light">
-                      <img src="https://randomuser.me/api/portraits/women/8.jpg" class="rounded-circle mb-3 p-2">
-                      <h3 class="card-title mb-3 text-center"><u>Mia</u></h3>
+                      <img src="https://randomuser.me/api/portraits/men/8.jpg" class="rounded-circle mb-3 p-2">
+                      <h3 class="card-title mb-3 text-center"><u>Stuart</u></h3>
                       <p class="card-text p-3 text-center lead">
                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati velit ipsa voluptatibus aut inventore animi temporibus alias iure sint pariatur.
                       </p>
@@ -354,8 +354,8 @@
                   
                   <div class="col-md-6 col-lg-3"> 
                     <div class="card bg-light">
-                      <img src="https://randomuser.me/api/portraits/women/20.jpg" class="rounded-circle mb-3 p-2">
-                      <h3 class="card-title mb-3 text-center"><u>Lisa</u></h3>
+                      <img src="https://randomuser.me/api/portraits/men/20.jpg" class="rounded-circle mb-3 p-2">
+                      <h3 class="card-title mb-3 text-center"><u>Alex</u></h3>
                       <p class="card-text p-3 text-center lead">
                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati velit ipsa voluptatibus aut inventore animi temporibus alias iure sint pariatur.
                       </p>
@@ -419,7 +419,7 @@
               <div class="container">
 
                 <p class="lead"> <u></u>Copyright &copy; 2023 Frontend Stuffs </p>
-                <p class="lead">~<u>Chirag Maini</u></p>
+                <p class="lead">~<u>Chirag Maini </u></p>
                 <a href="#" class="position-absolute bottom-0 end-0 p-5">
                   <i class="bi bi-arrow-up-circle h1"></i>
                 </a>
